# SACHECK

./: .gitattributes  .gitignore  AGENT_HANDOFF.md  AI_THEME_BRIEF.md  AI_UPDATE_TEST_BRIEF.md  CREDITS.txt  DEVELOPERS.md  README.md  README_UPDATE_PACKAGE.txt  SACHECK.spec  SACHECK_Flet.spec  UPDATE_CHANNEL.md  USER_GUIDE.md  app.py  category_config.py  flet_app.py  pyproject.toml  requirements.txt  sacheck_integrity.json  sacheck_runtime.py  sacheck_update.json  sacheck_update_manifest.example.json
assets/category_icons/: README.txt
config/: __init__.py  category.py
core/: __init__.py  app_lifecycle.py  app_paths.py  app_settings.py  bulk_import.py  create_tools.py  file_intelligence.py  flet_constants.py  flet_data.py  flet_theme.py  flet_utils.py  native_file_drop.py  startup_preflight.py
design/: V2_ROADMAP.md  sacheck-minimal-kanban.html
installer/: SACHECK_1.0.9.iss  SACHECK_2.0.0.iss  SACHECK_2.0.1.iss  SACHECK_2.0.2.iss  SACHECK_2.0.3.iss  SACHECK_2.0.4.iss  SACHECK_2.0.5.iss  SACHECK_2.0.6.iss  SACHECK_2.0.7.iss  SACHECK_2.0.8-1.iss  SACHECK_2.0.8.iss  SACHECK_2.0.9.iss  SACHECK_2.1.0-1.iss  SACHECK_2.1.0-2.iss  SACHECK_2.1.0-3.iss  SACHECK_2.1.0.iss  install_sacheck.ps1  uninstall_sacheck.ps1
stores/: __init__.py  json_stores.py
tools/: build_integrity_manifest.py  export_source_snapshot.py  profile_performance.py  smoke_test.py  test_board_groups.py  test_board_stress.py  test_bulk_import.py  test_core.py
ui/: __init__.py  diagnostics_window.py  dialogs.py  flet_dashboard.py  flet_widgets.py  settings_window.py  shared.py  startup.py  virtual_list.py  windows.py
ui/screens/: __init__.py  board.py  browser.py  calendar_screen.py  health.py  overview.py  settings_screen.py  templates.py
web-prototype/: README.md  app.js  index.html  styles.css
