[project]
name = "sacheck"
version = "1.0.9.post1"
description = "SA CHECK desktop work board"
dependencies = [
  "flet==0.85.3",
  "pillow>=11.0.0",
  "pywin32>=306",
]

[tool.flet]
product = "SA CHECK"
company = "HOYTURBRO"
copyright = "Copyright (c) 2026 HOYTURBRO"

[tool.flet.app]
module = "app"
exclude = [
  ".venv",
  ".git",
  ".dev_profile",
  ".dev_work",
  "app",
  "build",
  "dist",
  "release",
  "cache",
  "design",
  "installer",
  "tools",
  "DEV_ENGINE.bat",
  "DEV_ENGINE_UI.bat",
  "DEV_RUN_README.txt",
  "RUN_DEV.bat",
  "SETUP_DEV.bat",
  "SA CHECK DEV.lnk",
  "SA CHECK DEV ENGINE UI.lnk",
  "__pycache__",
]

[tool.flet.windows]
artifact = "SACHECK"
