[project]
name = "sacheck"
version = "2.0.1"
description = "SA CHECK desktop work board"
dependencies = [
  "flet==0.85.3",
  "pillow>=11.0.0",
  "pywin32>=306",
]

[tool.flet]
product = "SA CHECK"
company = "HOYTURBRO"
copyright = "Copyright (c) 2026 HOYTURBRO"

[tool.flet.app]
module = "app"
hide_window_on_start = true
exclude = [
  ".venv",
  ".git",
  "app",
  "build",
  "dist",
  "release",
  "cache",
  "design",
  "installer",
  "tools",
  "__pycache__",
]

[tool.flet.windows]
artifact = "SACHECK"
