[project]
name = "sacheck"
version = "2.0.8.post1"
description = "SA CHECK desktop work board"
dependencies = [
  "flet==0.85.3",
  "pillow>=11.0.0",
  "pywin32>=306",
]

[tool.flet]
product = "SA CHECK"
company = "HOYTURBRO"
copyright = "Copyright (c) 2026 HOYTURBRO"

[tool.flet.app]
module = "app"
hide_window_on_start = true
exclude = [
  ".claude",
  ".venv",
  ".git",
  ".github",
  "app",
  "build",
  "dist",
  "release",
  "cache",
  "design",
  "installer",
  "tools",
  "web-prototype",
  "__pycache__",
  "**/__pycache__",
  "*.pyc",
  "*.pyo",
  "*.tmp",
  "*.log",
]

[tool.flet.windows]
artifact = "SACHECK"
